--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -47,11 +47,13 @@ jobs:
           
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: create release
+      - name: Create release
+        id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+          GITHUB_TOKEN: ${{ secrets.github_token }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ github.run_number }}
           release_name: Release from ${{ github.run_number }}
